[MT-4782] Fix menu overlapping with Web Bookmark thumbnail image

--- a/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
+++ b/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
@@ -47,6 +47,7 @@
     width: 280px;
     position: absolute;
     backdrop-filter: blur(6px);
+    z-index: 1;
 }
 
 .arrow {
